--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ button:active{
 
 <h1>จับรางวัล Lucky Draw</h1>
 
-<div id="num" class="number">---</div>
+<div id="num" class="number">🤩🤩🤩🤩🤩</div>
 
 <button onclick="start()">เริ่มสุ่ม</button>
 
