--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ function start(){
   let final = pool[Math.floor(Math.random()*pool.length)].toString();
   used.push(parseInt(final));
 
-  let display = ["-","-","-","-","-"];
+  let display = ["🤩","🤩","🤩","🤩","🤩"];
   let index = 0;
 
   let interval = setInterval(()=>{
@@ -74,10 +74,37 @@ function start(){
     index++;
     if(index === 5){
       clearInterval(interval);
+      shootConfetti();
     }
   },600);
 }
+
+function shootConfetti() {
+  const duration = 3 * 1000;
+  const end = Date.now() + duration;
+
+  (function frame() {
+    confetti({
+      particleCount: 7,
+      angle: 60,
+      spread: 55,
+      origin: { x: 0 }
+    });
+    confetti({
+      particleCount: 7,
+      angle: 120,
+      spread: 55,
+      origin: { x: 1 }
+    });
+
+    if (Date.now() < end) {
+      requestAnimationFrame(frame);
+    }
+  })();
+}
+
 </script>
+<script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 
 
 </body>
