--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
 <title>Lucky Draw - Thai Airways</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <style>
-  
+  html {
+  -webkit-text-size-adjust: 100%;
+}
+
 body{
   margin:0;
   font-family:Arial, sans-serif;
@@ -20,9 +23,10 @@ body{
   max-width:180px;
 }
 .number{
-  font-size:72px;
-  letter-spacing:20px;
-  margin:40px 0;
+  font-size: 10vw;     
+  letter-spacing: 2vw;
+  margin: 30px 0;
+  line-height: 1.2;
 }
 button{
   font-size:28px;
